tests/negative/regression/r11.orng
// r11.orng:6:28: error: expected tuple type for tuple pattern, got `[]String`
//     let (a, b, c): []String
//                           ^
// 
fn main()->() {
    let (a, b, c): []String
}